# libsel4-idris-ffi

./: .gitattributes  CMakeLists.txt  Kbuild  Makefile  README.md  libsel4ffi.ipkg  seL4FFI.ipkg
cmake/: Idris.cmake  seL4.cmake  top-level.cmake
glue/: CMakeLists.txt  ffi-bootinfo.h  ffi-syscalls.c
seL4/Arch/: Functions.idr
src/glue/: ffi-bootinfo.c  ffi-syscalls.h
src/seL4/: Bootinfo.idr.m4  BootinfoTypes.idr.m4  Functions.idr  SharedTypes.idr  SharedTypes.idr.m4  Syscalls.idr.m4  Types.idr  Types.idr.m4  seL4.idr  seL4.idr.m4  seL4Debug.idr  seL4Debug.idr.m4
tools/: genm4flags.sh
